Make ICO page header fixed on mobile

--- a/src/sass/pages/ico_landing_page.scss
+++ b/src/sass/pages/ico_landing_page.scss
@@ -349,7 +349,6 @@ input[type='text']:focus, input[type='submit']:focus {
         }
     }
     .navbar-fixed-top {
-        position: relative;
         background: $COLOR_BLUE !important;
         margin-bottom: 0;
         padding: 15px;
@@ -364,7 +363,6 @@ input[type='text']:focus, input[type='submit']:focus {
 
         &.expand {
             max-height: 440px;
-            height: 100%;
             padding-bottom: 0;
         }
         .navbar-header {
